--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1171,6 +1171,19 @@
   file = {/home/philipp/Zotero/storage/XIKA757A/jags_user_manual.pdf}
 }
 
+@book{press2007numerical,
+  title = {Numerical {{Recipes}}: {{The Art}} of {{Scientific Computing}}},
+  author = {Press, William H. and Teukolsky, Saul A. and Vetterling, William T. and Flannery, Brian P.},
+  date = {2007},
+  edition = {3},
+  publisher = {{Cambridge University Press}},
+  location = {{New York, NY, USA}},
+  file = {/home/philipp/Zotero/storage/PPBMYENH/Press et al. - 2007 - Numerical Recipes The Art of Scientific Computing.pdf},
+  isbn = {0-521-88068-8 978-0-521-88068-8},
+  keywords = {linear algebra,numerics,programming},
+  langid = {english}
+}
+
 @online{radul2013introduction,
   title = {Introduction to {{Automatic Differentiation}}},
   author = {Radul, Alexey},
