--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -259,7 +259,7 @@
 % -------------------------------------------------------------------------------
 \title{\longtitle}
 
-% \includeonly{background,automatic_graph_tracking}
+\includeonly{background,automatic_graph_tracking}
 
 \begin{document}
 \chapterstyle{hangnum}
@@ -311,7 +311,7 @@
 % -------------------------------------------------------------------------------
 % BIBLIOGRAPHY
 \cleartorecto
-\include{biliography}
+\include{bibliography}
 
 % -------------------------------------------------------------------------------
 % APPENDIX
